<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".LanguagesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/Languages"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:backgroundTint="@color/Lyellow"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/English"
            android:textStyle="bold"
            android:textColor="@color/darkgray"
            android:textSize="16sp" />

        <View
            android:layout_width="20dp"
            android:layout_height="10dp"
            android:layout_gravity="fill_horizontal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_thai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:backgroundTint="@color/Lpurple"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/Thai"
            android:textStyle="bold"
            android:textColor="@color/darkgray"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>