<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:id="@+id/fragment_add"
    tools:context=".AddFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/cancel_transaction_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/CANCEL"
                    android:textColor="@color/darkgray" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="fill_horizontal" />

                <Button
                    android:id="@+id/save_transaction_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/SAVE"
                    android:textColor="@color/darkgray" />
            </LinearLayout>

            <TextView
                android:id="@+id/add_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ADD"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/boxbg">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/amount_transaction"
                            android:background="@drawable/boxinside"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:inputType="number"
                            android:padding="10dp"
                            android:hint="฿"
                            android:textColor="@color/black"
                            android:textSize="50sp"
                            android:textStyle="bold" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/boxinside">

                            <RadioGroup
                                android:id="@+id/radio_transaction"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="horizontal"
                                tools:ignore="MissingConstraints">

                                <RadioButton
                                    android:id="@+id/income_transaction"
                                    android:layout_width="120dp"
                                    android:layout_height="50dp"
                                    android:text="@string/INCOME"/>

                                <RadioButton
                                    android:id="@+id/expenses_transaction"
                                    android:layout_width="120dp"
                                    android:layout_height="50dp"
                                    android:text="@string/EXPENSES"/>
                            </RadioGroup>

                        </androidx.constraintlayout.widget.ConstraintLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:paddingRight="20dp"
                            android:paddingBottom="10dp">

                            <ImageView
                                android:id="@+id/date_pic"
                                android:layout_width="50dp"
                                android:layout_height="50dp"

                                android:src="@drawable/calendar" />

                            <TextView
                                android:id="@+id/dateTxt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingLeft="20dp"
                                android:textSize="17sp"
                                android:layout_gravity="center_vertical"
                                />

                            <Button
                                android:id="@+id/dateBtn"
                                android:layout_width="135dp"
                                android:layout_height="match_parent"

                                android:text="select date" />
                            <!--<CalendarView
                                android:id="@+id/calendar_transaction"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />-->

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:paddingRight="20dp"
                            android:paddingBottom="10dp">

                            <ImageView
                                android:id="@+id/time_pic"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/clock" />

                            <TextView
                                android:id="@+id/timeTxt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingLeft="20dp"
                                android:textSize="17sp"
                                android:layout_gravity="center_vertical"
                                />

                            <Button
                                android:id="@+id/timeBtn"
                                android:layout_width="135dp"
                                android:layout_height="match_parent"

                                android:text="select time"
                                />
                            <!--<CalendarView
                                android:id="@+id/calendar_transaction"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />-->

                        </LinearLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/boxinside">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp">

                                <ImageView
                                    android:id="@+id/category_pic"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:src="@drawable/pink" />

                                <Spinner
                                    android:id="@+id/category_spinner"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:spinnerMode="dropdown"
                                    android:paddingLeft="10dp" />

                            </LinearLayout>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/boxinside">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp">

                                <ImageView
                                    android:id="@+id/note_pic"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:src="@drawable/post_it" />

                                <EditText
                                    android:id="@+id/note_transaction"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@drawable/edit_text_bg"
                                    android:inputType="text"
                                    android:paddingLeft="20dp"
                                    android:hint="Note" />

                            </LinearLayout>
                        </androidx.constraintlayout.widget.ConstraintLayout>



                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>